<resources>
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="live_display_title">LiveDisplay</string>
    <string name="live_display_summary">Optimize your screen based on time of day and ambient conditions to improve readability and reduce eyestrain</string>
    <string name="live_display_mode">Display mode</string>
    <string name="live_display_color_temperature_title">Color temperature</string>
    <string name="live_display_color_temperature_summary">Day: %1$dK Night: %2$dK</string>
    <string name="live_display_color_temperature_label">%1$dK</string>
    <string name="live_display_day">Day</string>
    <string name="live_display_night">Night</string>
    <string name="live_display_outdoor_mode_title">Automatic outdoor mode</string>
    <string name="live_display_outdoor_mode_summary">Increase brightness and saturation automatically under bright sunlight</string>
    <string name="live_display_low_power_title">Reduce power consumption</string>
    <string name="live_display_low_power_summary">Adjust display for lowest power consumption without degradation</string>
    <string name="live_display_enhance_color_title">Enhance colors</string>
    <string name="live_display_enhance_color_summary">Improve color vibrance of flesh tones, scenery, and other images</string>
    <string name="live_display_color_profile_title">Color profile</string>
    <string name="live_display_color_profile_standard_title">Standard</string>
    <string name="live_display_color_profile_standard_summary">Accurate colors and bright whites</string>
    <string name="live_display_color_profile_natural_title">Natural</string>
    <string name="live_display_color_profile_natural_summary">Realistic colors and flesh tones</string>
    <string name="live_display_color_profile_dynamic_title">Dynamic</string>
    <string name="live_display_color_profile_dynamic_summary">Enhanced colors and bright whites</string>
    <string name="live_display_color_profile_cinema_title">Cinema</string>
    <string name="live_display_color_profile_cinema_summary">Perfect color reproduction for video</string>
    <string name="live_display_color_profile_astronomy_title">Astronomy</string>
    <string name="live_display_color_profile_astronomy_summary">Deep red for preserving night vision</string>
    <string name="live_display_color_profile_photography_title">Photography</string>
    <string name="live_display_color_profile_photography_summary">Perfect color reproduction for photos</string>
    <string name="live_display_color_profile_basic_title">Basic</string>
    <string name="live_display_color_profile_basic_summary">Use the display uncalibrated</string>
    <string name="live_display_color_profile_adaptive_title">Adaptive</string>
    <string name="live_display_color_profile_adaptive_summary">Colors adapt to ambient conditions</string>
    <string name="picture_adjustment_title">Picture adjustment</string>
    <string name="picture_adjustment_summary">Adjust hue, saturation, intensity, and contrast</string>
    <string name="adj_hue_title">Hue</string>
    <string name="adj_saturation_title">Saturation</string>
    <string name="adj_intensity_title">Intensity</string>
    <string name="adj_contrast_title">Contrast</string>
    <string name="lcd_density">LCD density</string>
    <string name="dialog_title_lcd_density">LCD density</string>
    <string name="lcd_density_value_format">%d DPI</string>
    <string name="lcd_density_default_value_format">%d DPI (default)</string>
    <string name="restarting_ui">Restarting UI…</string>
    <string name="battery_saver_threshold">Battery saver threshold</string>
    <string name="battery_saver_summary">Reduce performance and limit background data</string>
    <string name="battery_saver_summary_unavailable">Not available while charging</string>
    <string name="lights_category_title">Lights</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_brightness">@string/brightness</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
    <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
    <string name="keywords_lights_brightness_level">dim leds brightness</string>
    <string name="notification_light_automagic">Choose colors automatically</string>
    <string name="led_notification_title">Light settings</string>
    <string name="led_notification_text">LED light enabled by settings</string>
    <string name="notification_light_no_apps_summary">"To add per app control, activate '%1$s' and press '+' on the menu bar"</string>
    <string name="profile_reset_title">Reset</string>
    <string name="profile_reset_message">Delete all user created profiles and app groups and restore them to default?</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profiles_add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="app_name">Settings MIUI-Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="gestures">Gestures</string>
    <string name="gestures_settings">Gesture</string>
    <string name="double_tap_to_wake_title">Double-tap to wake</string>
    <string name="display_settings_title">Display</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="adaptive_backlight_title">Adaptive backlight</string>
    <string name="adaptive_backlight_summary">"Dynamically adjust the brightness of the display's backlight to maximize battery life while maintaining usability"</string>
    <string name="color_enhancement_title">Color enhancement</string>
    <string name="color_enhancement_summary">Dynamically enhance the color of the display</string>
    <string name="sunlight_enhancement_title">Sunlight enhancement</string>
    <string name="sunlight_enhancement_summary">Enhance display brightness and readability under bright sunlight</string>
    <string name="button_settings">Buttons</string>
    <string name="disable_navkeys_title">Disable hardware buttons</string>
    <string name="disable_navkeys_summary">Use this toggle when using navbar enabled from build.prop</string>
    <string name="button_wake_title">Volume Keys Wake up device</string>
    <string name="button_wake_summary">Overrides playback control</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">"Don't turn off"</string>
    <string name="backlight_summary_disabled">Disabled</string>
    <string name="backlight_summary_enabled_with_timeout">Enabled for %s</string>
    <string name="backlight_summary_enabled">Enabled</string>
    <string name="settings_reset_button">Reset</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="oclick_panel_title">O-Click settings</string>
    <string name="oclick_panel_summary">Configure O-Click device</string>
    <string name="screencolor">Screen color</string>
    <string name="custom_screencolor">Custom screen color</string>
    <string name="screencolor_save">Save</string>
    <string name="screencolor_cancel">Cancel</string>
    <string name="restore_preview">View default picture</string>
    <string name="selectnewfile_menu">View new picture from Gallery</string>
    <string name="selectfile_menu">View picture from Gallery</string>
    <string name="restore_default_str">Reset</string>
    <string name="hue_str">Hue: %1$s</string>
    <string name="saturation_str">Saturation: %1$s</string>
    <string name="contrast_str">Contrast: %1$s</string>
    <string name="ad_blocker">Ad blocker</string>
    <string name="adaway_title">AdAway</string>
    <string name="adaway_summary">Simple and fast ad blocker</string>
</resources>